test/compile_error/typemismatch.conf.6.def
config type_mismatch_conf {
	foo : uint_t(-123);
}
